[package]
name = "jaegercat"
version = "0.1.1"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "A handy command line tool showing traces emitted by Jaeger clients"
homepage = "https://github.com/sile/jaegercat"
repository = "https://github.com/sile/jaegercat"
readme = "README.md"
keywords = ["jaeger"]
license = "MIT"

[dependencies]
chrono = "0.4"
clap = "2"
serde = "1"
serde_derive = "1"
serdeconv = "0.3"
slog = {version = "2", features = ["release_max_level_debug"]}
sloggers = "0.2"
thrift_codec = "0.1"
trackable = "0.2"