[package]
name = "jaegercat"
version = "0.1.1"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "A handy command line tool showing traces emitted by Jaeger clients"
homepage = "https://github.com/sile/jaegercat"
repository = "https://github.com/sile/jaegercat"
readme = "README.md"
keywords = ["jaeger"]
license = "MIT"

[dependencies]
chrono = { version = "0.4" }
clap = { version = "4", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.20"
serde = "1"
serde_derive = "1"
serdeconv = "0.4"
thrift_codec = "0.1"
trackable = "1"
